--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_native_splash: ^2.4.4
   flutter_screenutil: ^5.9.3
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
