--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   dartz: ^0.10.1
   connectivity_plus: ^6.1.3
   fluttertoast: ^8.2.12
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
