--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   connectivity_plus: ^6.1.3
   fluttertoast: ^8.2.12
   shared_preferences: ^2.5.2
+  flutter_image_slideshow: ^0.1.6
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
